fixed alignment in logo and social icons

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 .logo-picture {
-    mx-auto
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
+.navbar>.container-fluid {
+    /* wasn't referencing the correct container */
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+}
 
 nav {
     display: flex;
@@ -31,16 +37,22 @@ nav a:hover {
     text-align: center;
 }
 
-  .hero-content {
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.hero-content {
     max-width: 800px;
 }
 
-  h1 {
+h1 {
     font-size: 3em;
     margin-bottom: 20px;
 }
 
-  p {
+p {
     font-size: 1.2em;
     line-height: 1.5;
 }
@@ -58,6 +70,7 @@ nav a:hover {
 
 .container {
     display: flex;
+    justify-content: center;
 }
 
 .card {
@@ -66,6 +79,7 @@ nav a:hover {
     border-radius: 8px;
     margin: 0 20px;
     background-color: #fff;
+    /* adding padding above and below the cards */
     
     
 }
